# tsp_algos

./: .gitignore  README.md  analysis.py  main.py  setup.py
algorithms/: base.py
algorithms/cpp/: CMakeLists.txt  brute_force.cp312-win_amd64.pyd  brute_force.cpp  greedy.cp312-win_amd64.pyd  greedy.cpp  held_karp.cp312-win_amd64.pyd  held_karp.cpp  mst_approximation.cp312-win_amd64.pyd  mst_approximation.cpp  own_convex_hull.cp312-win_amd64.pyd  own_convex_hull.cpp
analysis/: performance.py
data/: dataset.py  tsp_parser.py
results/: ConvexHull_a280.json  ConvexHull_kz9976.json  ConvexHull_xql662.json  Greedy_a280.json  Greedy_kz9976.json  Greedy_xql662.json  MSTApproximation_a280.json  MSTApproximation_kz9976.json  MSTApproximation_xql662.json
scripts/: analyze_results.py  generate_samples.py  test.py  visualize_result.py
scripts/datasets/: sample_10.tsp  sample_100.tsp  sample_15.tsp  sample_20.tsp  sample_25.tsp  sample_30.tsp  sample_35.tsp  sample_40.tsp  sample_45.tsp  sample_5.tsp  sample_50.tsp  sample_55.tsp  sample_60.tsp  sample_65.tsp  sample_70.tsp  sample_75.tsp  sample_80.tsp  sample_85.tsp  sample_90.tsp  sample_95.tsp
